Cambios en los layouts Cambios en los layouts de la disposición de los elementos en el listado y de la info de los elementos

--- a/app/src/main/res/layout/activity_dades_element.xml
+++ b/app/src/main/res/layout/activity_dades_element.xml
@@ -179,16 +179,28 @@
         app:layout_constraintStart_toStartOf="@+id/separadorVertical"
         app:layout_constraintTop_toBottomOf="@+id/informacioConfiguracioElement" />
 
-    <TextView
-        android:id="@+id/linkInternet"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titolEstatElement"
+        app:srcCompat="@drawable/ic_info"
+        android:contentDescription="TODO"
+        tools:ignore="VectorDrawableCompat" />
+
+    <TextView
+        android:id="@+id/linkInternet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
         android:text="Més informació"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/titolEstatElement" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
