--- a/app/src/main/res/menu/activity_personalitzar_colors_menu.xml
+++ b/app/src/main/res/menu/activity_personalitzar_colors_menu.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/restablir"
-        android:title="Restablir" />
+        android:icon="@drawable/ic_reload"
+        android:title="Restablir"
+        app:showAsAction="always" />
 </menu>
